<resources>
    <string name="app_name">RxExamples</string>
    <string name="action_settings">Settings</string>
    <string name="disposable_example">Disposable example</string>
    <string name="just_example">just example</string>
    <string name="amb_example">amb example</string>
    <string name="zip_example">zip example</string>
    <string name="repeat_example">repeat example</string>
    <string name="subjects">subjects</string>
    <string name="replay_subject_example">replay subject example</string>
    <string name="async_subject_example">async subject example</string>
    <string name="publish_subject_example">publish subject example</string>
    <string name="behavior_subject_example">behaviour subject example</string>
</resources>
